--- a/style.css
+++ b/style.css
@@ -1,15 +1,97 @@
+/* GLOBAL */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
+.hidden {
+    opacity: 0;
+}
+
+
+/* BODY */
 body {
     width: 100vw;
     height: 100vh;
 
     background-color: silver;
-
-
-
 }
+
+
+/* HEADER */
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(218, 218, 218);
+    padding: 10px 0 10px 20px ;
+    width: 100%;
+}
+
+header h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    width: 100%;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 50px;
+    position: relative;
+    gap: 15px;
+    margin-top: 20px;
+}
+
+nav ul {
+    background-color: rgb(218, 218, 218);
+    text-align: center;
+    width: fit-content;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+nav ul li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
+
+
+
+/* MAIN */
+main {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin: 20px 0;
+}
+
+main > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 20px;
+}
+
+main > div > button {
+    width: 100px;
+    height: 50px;
+    background-color: rgb(218, 218, 218);
+    border: none;
+    border-radius: 5px;
+    font-size: 1.1rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
