--- a/style.css
+++ b/style.css
@@ -15,54 +15,39 @@ body {
     width: 100vw;
     height: 100vh;
 
-    background-color: silver;
+    background-color: #777;
 }
 
 
 /* HEADER */
-header {
+
+a{
+    text-decoration: none;
+    color: #000;
+}
+
+header{
+    background-color: #CCC;
+    height: 10vh;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(218, 218, 218);
-    padding: 10px 0 10px 20px ;
-    width: 100%;
+    padding: 0 20px;
 }
 
-header h2 {
-    font-size: 1.5rem;
-    font-weight: bold;
-    width: 100%;
+nav{
+    max-width: 550px;
 }
 
-nav {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    height: 50px;
-    position: relative;
-    gap: 15px;
-    margin-top: 20px;
-}
-
-nav ul {
-    background-color: rgb(218, 218, 218);
-    text-align: center;
-    width: fit-content;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-}
-
-nav ul li {
+nav ul{
     list-style: none;
-    padding: 0;
-    margin: 0;
-    width: 100%;
+    display: flex;
 }
 
+nav ul li{
+    padding: 10px;
+}
 
 
 /* MAIN */
@@ -72,7 +57,7 @@ main {
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    margin: 20px 0;
+    margin: 40px 0;
 }
 
 main > div {
@@ -94,4 +79,37 @@ main > div > button {
     cursor: pointer;
 }
 
+#select{
+    border-radius: 10px;
+    padding: 8px;
+    background-color: #bbb;
+    cursor: pointer;
+    box-shadow: 1px 1px 8px #888;
+}
 
+#input_div{
+    border-radius: 20px;
+}
+
+#input_father{
+    margin-top: 40px;
+}
+
+#btn_calculate{
+    border-radius: 10px;
+    background-color: #fff;
+    color: #777;
+    transition: all ease 0.4s;
+    box-shadow: 1px 1px 8px #888;
+    margin-top: 10px;
+}
+
+#btn_calculate:hover{
+    opacity: 0.7;
+}
+
+
+option{
+    background-color: #bbb;
+    color: #000;
+}
