--- a/style.css
+++ b/style.css
@@ -56,7 +56,6 @@ main {
     width: 100%;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
     margin: 40px 0;
 }
 
@@ -70,13 +69,24 @@ main > div {
 
 main > div > button {
     width: 100px;
-    height: 50px;
+    height: 45px;
     background-color: rgb(218, 218, 218);
     border: none;
     border-radius: 5px;
     font-size: 1.1rem;
     font-weight: bold;
     cursor: pointer;
+
+    border-radius: 10px;
+    color: #777;
+    transition: all ease 0.4s;
+    box-shadow: 1px 1px 8px #888;
+    margin-top: 10px;
+}
+
+main > div > button:hover {
+    opacity: 0.7;
+
 }
 
 #select{
@@ -89,25 +99,30 @@ main > div > button {
 
 #input_div{
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#input_div p {
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
+#input_div input {
+    width: 100%;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #bbb;
+    cursor: pointer;
+    box-shadow: 1px 1px 8px #888;
 }
 
 #input_father{
     margin-top: 40px;
 }
-
-#btn_calculate{
-    border-radius: 10px;
-    background-color: #fff;
-    color: #777;
-    transition: all ease 0.4s;
-    box-shadow: 1px 1px 8px #888;
-    margin-top: 10px;
-}
-
-#btn_calculate:hover{
-    opacity: 0.7;
-}
-
 
 option{
     background-color: #bbb;
