--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
     opacity: 0;
 }
 
-
 /* BODY */
 body {
     width: 100vw;
@@ -46,7 +45,13 @@ nav ul{
 }
 
 nav ul li{
+    transition: all 0.3s ease-in-out;
     padding: 10px;
+}
+
+nav ul li:hover{
+    background-color: rgb(194, 194, 194);
+    border-radius: 5px;
 }
 
 
@@ -57,14 +62,7 @@ main {
     flex-direction: column;
     align-items: center;
     margin: 40px 0;
-}
-
-main > div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    gap: 20px;
+    gap: 15px;
 }
 
 main > div > button {
@@ -76,25 +74,37 @@ main > div > button {
     font-size: 1.1rem;
     font-weight: bold;
     cursor: pointer;
+    margin: 10px auto 0;
 
     border-radius: 10px;
     color: #777;
     transition: all ease 0.4s;
     box-shadow: 1px 1px 8px #888;
-    margin-top: 10px;
 }
 
 main > div > button:hover {
     opacity: 0.7;
-
 }
 
 #select{
-    border-radius: 10px;
-    padding: 8px;
-    background-color: #bbb;
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    justify-content: center;
     cursor: pointer;
-    box-shadow: 1px 1px 8px #888;
+}
+
+#input_father {
+    border: none;
+    border-radius: 5px;
+    font-size: 1.1rem;
+    font-weight: bold;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+
+    transition: all ease 0.4s;
 }
 
 #input_div{
@@ -102,14 +112,11 @@ main > div > button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-#input_div p {
     font-size: 1.4rem;
     font-weight: bold;
 }
 
-#input_div input {
+.input_value {
     width: 100%;
     height: 40px;
     border: none;
@@ -120,11 +127,24 @@ main > div > button:hover {
     box-shadow: 1px 1px 8px #888;
 }
 
-#input_father{
-    margin-top: 40px;
+#basen {
+    box-shadow: 1px 1px 8px #888;
+    border-radius: 10px;
+    background-color: #bbb;
+    cursor: pointer;
+    padding: 5px 10px;
+    border: none;
+    text-align: center;
 }
 
-option{
-    background-color: #bbb;
-    color: #000;
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
