--- a/style.css
+++ b/style.css
@@ -33,14 +33,13 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
-
-    
-    
 }
+
 @media (max-width: 768px) {
     header {
         flex-direction: column;
         align-items: center;
+        height: fit-content;
     }
 }
 
