--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ header{
         flex-direction: column;
         align-items: center;
         height: fit-content;
+        text-align: center;
     }
 }
 
