--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+
 }
 
 .hidden {
@@ -14,7 +16,7 @@ body {
     width: 100vw;
     height: 100vh;
 
-    background-color: #777;
+    background-color: #334440;
 }
 
 
@@ -22,11 +24,11 @@ body {
 
 a{
     text-decoration: none;
-    color: #000;
+    color: #eff8f6;
 }
 
 header{
-    background-color: #CCC;
+    background-color: #688981;
     height: 10vh;
     width: 100%;
     display: flex;
@@ -77,7 +79,7 @@ main {
 main > div > button {
     width: 100px;
     height: 45px;
-    background-color: rgb(218, 218, 218);
+    background-color: rgb(255, 255, 255);
     border: none;
     border-radius: 5px;
     font-size: 1.1rem;
@@ -93,6 +95,8 @@ main > div > button {
 
 main > div > button:hover {
     opacity: 0.7;
+    background-color: #dde7e4;
+
 }
 
 #select{
@@ -123,6 +127,8 @@ main > div > button:hover {
     align-items: center;
     font-size: 1.4rem;
     font-weight: bold;
+    color: #fff;
+
 }
 
 .input_value {
@@ -131,20 +137,132 @@ main > div > button:hover {
     border: none;
     border-radius: 10px;
     padding: 10px;
-    background-color: #bbb;
+    background-color: #fff;
     cursor: pointer;
     box-shadow: 1px 1px 8px #888;
+}
+
+.input_value:hover
+{
+    background-color: #dde7e4;
 }
 
 #basen {
     width: 100px;
     box-shadow: 1px 1px 8px #888;
     border-radius: 10px;
-    background-color: #bbb;
+    background-color: #fff;
     cursor: pointer;
     padding: 5px 10px;
     border: none;
     text-align: center;
+}
+
+#basen:hover {
+    background-color: #dde7e4;
+}
+
+#result_div {
+    color: #fff;
+}
+
+  .modal {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(77, 77, 77, .7);
+    transition: all .4s;
+  }
+
+  .modal h1 {
+        text-align: center;
+        margin-bottom: 10px;
+  }
+
+  .modal p {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    text-align: justify;
+  }
+  
+  .modal:target {
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  .modal__content {
+    border-radius: 4px;
+    position: relative;
+    width: 500px;
+    max-width: 90%;
+    background: #fff;
+    padding: 1em 2em;
+  }
+  .modal__close {
+    font-size: 150%;
+    position: absolute;
+    top: 10px;
+    right: 18px;
+    color: #585858;
+    text-decoration: none;
+  }
+
+/* SLIDER */
+
+.slidecontainer {
+    width: 10%;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+  }
+  
+  .slider {
+    -webkit-appearance: none;
+    height: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    background: #04AA6D;
+    cursor: pointer;
+    border-radius: 100%
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #04AA6D;
+    cursor: pointer;
+  }
+
+#ajuda_icon {
+    width: 40px;
+    position:fixed;
+    bottom: 5px;
+    right: 5px;
+    background-color: #fff;
+    border-radius: 50%;
+    padding: 0.5%;
 }
 
 /* Chrome, Safari, Edge, Opera */
