--- a/style.css
+++ b/style.css
@@ -76,7 +76,11 @@ main {
     gap: 15px;
 }
 
-main > div > button {
+#sourcecode {
+  width: 150px;
+}
+
+.button {
     width: 100px;
     height: 45px;
     background-color: rgb(255, 255, 255);
@@ -93,7 +97,7 @@ main > div > button {
     box-shadow: 1px 1px 8px #888;
 }
 
-main > div > button:hover {
+.button:hover {
     opacity: 0.7;
     background-color: #dde7e4;
 
@@ -105,6 +109,35 @@ main > div > button:hover {
     gap: 15px;
     justify-content: center;
     cursor: pointer;
+}
+
+#caixaSelect{
+  width: 40%;
+  display: flex;
+  flex: 0.7 1 200px; /* 0.7 Tira a impressão da div esquerda não estar centralizada*/
+  flex-direction: column;
+  gap: 15px;
+  justify-content: center;
+  cursor: pointer;
+  align-items: center;
+}
+
+#container_operacao{
+  visibility: visible;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#memoria_calculo {
+  height: 50vh;
+  color: white;
+  width: 40%;
+  padding: 2%;
+  overflow-y: auto;
+}
+
+div div h3 { /* Título dentro da memória de cálculo */
+  text-align: center;
 }
 
 #input_father {
@@ -166,103 +199,114 @@ main > div > button:hover {
     color: #fff;
 }
 
-  .modal {
-    visibility: hidden;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(77, 77, 77, .7);
-    transition: all .4s;
-  }
-
-  .modal h1 {
-        text-align: center;
-        margin-bottom: 10px;
-  }
-
-  .modal p {
-    margin-top: 20px;
-    margin-bottom: 10px;
-    text-align: justify;
-  }
+#div_sourcecode { /*Código-fonte começa em 'none', a função altera quando o botão é clicado*/
+  display: none;
+}
   
-  .modal:target {
-    visibility: visible;
-    opacity: 1;
-  }
-  
-  .modal__content {
-    border-radius: 4px;
-    position: relative;
-    width: 500px;
-    max-width: 90%;
-    background: #fff;
-    padding: 1em 2em;
-  }
-  .modal__close {
-    font-size: 150%;
-    position: absolute;
-    top: 10px;
-    right: 18px;
-    color: #585858;
-    text-decoration: none;
-  }
+.gist-data{
+  height: 65vh;
+  width: 80vw;
+  overflow-y: visible;
+}
+
+.modal {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(77, 77, 77, .7);
+  transition: all .4s;
+}
+
+.modal h1 {
+      text-align: center;
+      margin-bottom: 10px;
+}
+
+.modal p {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  text-align: justify;
+}
+
+.modal:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__content {
+  border-radius: 4px;
+  position: relative;
+  width: 500px;
+  max-width: 90%;
+  background: #fff;
+  padding: 1em 2em;
+}
+
+.modal__close {
+  font-size: 150%;
+  position: absolute;
+  top: 10px;
+  right: 18px;
+  color: #585858;
+  text-decoration: none;
+}
 
 /* SLIDER */
 
 .slidecontainer {
-    width: 10%;
-    display: flex;
-    justify-content: center;
-    align-self: center;
-  }
+  width: 10%;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
+.slider {
+  -webkit-appearance: none;
+  height: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
   
-  .slider {
-    -webkit-appearance: none;
-    height: 5px;
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-    
-  }
-  
-  .slider:hover {
-    opacity: 1;
-  }
-  
-  .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 20px;
-    height: 20px;
-    background: #04AA6D;
-    cursor: pointer;
-    border-radius: 100%
-  }
-  
-  .slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    background: #04AA6D;
-    cursor: pointer;
-  }
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background: #04AA6D;
+  cursor: pointer;
+  border-radius: 100%
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #04AA6D;
+  cursor: pointer;
+}
 
 #ajuda_icon {
-    width: 40px;
-    position:fixed;
-    bottom: 5px;
-    right: 5px;
-    background-color: #fff;
-    border-radius: 50%;
-    padding: 0.5%;
+  width: 60px;
+  position: fixed;
+  bottom: 3%;
+  right: 3%;
+  background-color: #fff;
+  border-radius: 50%;
+  padding: 0.5%;
 }
 
 /* Chrome, Safari, Edge, Opera */
