Correção de bugs
1. Consertado o erro em que, se ocorresse sucesso na primeira tentativa de cálculo, porém erro na segunda, a memória de cálculo da primeira ainda apareceria na tela.

2. Consertado o erro em que o resultado da 'result_div' estava diferente do resultado da memória de cálculo quando havia uma letra.

3. Consertado o erro em que inserir uma base maior que 36 permitia que a operação fosse realizada e que essa base fosse exibida na memória de cálculo.

4. Consertado o bug em que inserir a base via texto não atualizava o slider.

5. Alterado o cursor mostrado ao passar o mouse nos inputs (base + valores) para o de texto

--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ main {
 }
 
 #memoria_calculo {
+  text-align: justify;
   height: 50vh;
   color: white;
   width: 40%;
@@ -178,6 +179,7 @@ div div h3 { /* Título dentro da memória de cálculo */
 .input_value:hover
 {
     background-color: #dde7e4;
+    cursor: text;
 }
 
 #basen {
@@ -193,6 +195,7 @@ div div h3 { /* Título dentro da memória de cálculo */
 
 #basen:hover {
     background-color: #dde7e4;
+    cursor: text;
 }
 
 #result_div {
